[tool.poetry]
name = "broadcaster"
version = "0.2.0"
description = "Simple broadcast channels."
authors = ["Tom Christie <tom@tomchristie.com>"]
readme = "README.md"
license = "BSD-3-Clause"
packages = []

[tool.poetry.dependencies]
python = ">=3.8"
anyio = ">=3.4.0"

[tool.poetry.extras]
redis = ["redis"]
postgres = ["asyncpg"]
kafka = ["aiokafka"]
test =  ["pytest", "pytest-asyncio"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
